src/test/ui/entry-point/imported_main_const_fn_item_type_forbidden.stderr
error[E0601]: `main` function not found in crate `imported_main_const_fn_item_type_forbidden`
  --> $DIR/imported_main_const_fn_item_type_forbidden.rs:13:22
   |
LL | use foo::BAR as main;
   |     ---------------- ^ consider adding a `main` function to `$DIR/imported_main_const_fn_item_type_forbidden.rs`
   |     |
   |     non-function item at `crate::main` is found

error[E0308]: mismatched types
  --> $DIR/imported_main_const_fn_item_type_forbidden.rs:9:29
   |
LL |     type MainFn = impl Fn();
   |                   --------- the expected opaque type
...
LL |     pub const BAR: MainFn = bar;
   |                             ^^^ expected opaque type, found fn item
   |
   = note: expected opaque type `impl Fn()`
                  found fn item `fn() {bar}`

error: could not find defining uses
  --> $DIR/imported_main_const_fn_item_type_forbidden.rs:5:19
   |
LL |     type MainFn = impl Fn();
   |                   ^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0601.
For more information about an error, try `rustc --explain E0308`.
